# fct_annotate

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/fct_annotate/: __init__.py
tests/: test_annotations.py
